- New introduction patterns "*" for introducing the next block of dependent 
  variables and "**" for introducing all quantified variables and hypotheses.
- Pattern Unification for existential variables activated in tactics and 
  new option "Unset Tactic Evars Pattern Unification" to deactivate it.
- New tactic "etransitivity".
- Support of JMeq for "injection" and "discriminate".

Tactic Language

- Support for parsing non-empty lists with separators in tactic notations.

Vernacular commands

- New command "Timeout <n> <command>." interprets a command and a timeout
  interrupts the interpretation after <n> seconds.
- Option -R now supports binding Coq root read-only.
- New support for local binders in the syntax of Record/Structure fields.

Tools

- New coqtop/coqc option -beautify to reformat .v files (usable
  e.g. to globally update notations).
- New tool beautify-archive to beautify a full archive of developments.
- New coqtop/coqc option -compat X.Y to simulate the general behavior
  of previous versions of Coq (provides e.g. support for 8.2 compatibility).

Library

- Use "Coq standard" names for the properties of eq and identity
  (e.g. refl_equal is now eq_refl). Support for compatibility is provided.
- The function Compare_dec.nat_compare is now defined directly,
  instead of relying on lt_eq_lt_dec. The earlier version is still
  available under the name nat_compare_alt.

Changes from V8.1 to V8.2
=========================

Language

- If a fixpoint is not written with an explicit { struct ... }, then 
  all arguments are tried successively (from left to right) until one is 
  found that satisfies the structural decreasing condition.
- New experimental typeclass system giving ad-hoc polymorphism and 
  overloading based on dependent records and implicit arguments.
- New syntax "let 'pat := b in c" for let-binding using irrefutable patterns.
- New syntax "forall {A}, T" for specifying maximally inserted implicit 
  arguments in terms.